--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "bad-words": "^3.0.3",
     "grunt": "1.0.4",
     "pubnub": "^4.28.0",
     "sails": "^1.2.4",
